style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

:root {
    font-size: 16px;
}


a {
    text-decoration: none;
    color: inherit;
}


.account-settings {
    display: grid;
    grid-template: repeat(3, 1fr) / 1fr;
    row-gap: 10px;
    width: 100%;
}

.account-settings > span, 
.main-navigation > span {
    column-gap: 10px;
    display: grid;
    grid-template-columns: 1fr 4fr;
}

.account-settings > span > svg,
.main-navigation > span > svg {
    fill: white;
    height: 20px;
    justify-self: center;
    width: 20px;
}

.activities {
    align-items: center;
    display: grid;
    grid-template-columns: 5fr 1fr 1fr;
    margin-right: 10px;

}

.activities > svg {
    fill: black;
    height: 20px;
    width: 20px;
}

.activities > svg:first-child {
    justify-self: end;
    margin-right: 10px;
}

.activities > svg:nth-child(n+2) {
    justify-self: center;
}

.activities > svg:hover {
    fill: #CC0000

}


.announcement-heading {
    font-size: 1rem;
}


#announcement-main-heading {
    font-size: 1.2rem;
    margin-bottom: 11px;
}


.announcement-body {
    font-size: 0.9rem;
}

.announcement:hover {
    background-color: #EEF0E5;
    cursor: pointer;
}

.announcements {

    background-color: whitesmoke;
    border-radius: 10px;
    height: 300px;
    margin-right: 25px;
    padding: 22px;

    /* Items: */
    align-items: center;
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    justify-items: center;
}

    
body {
    height: 100vh;
    width: 100vw;
}

.bottom-card {
    background-color: whitesmoke;
    border-radius: 10px;
    height: 260px;
    margin-right: 25px;
    padding: 15px 0px 15px 15px;

    /* Items: */
    display: grid;
    grid-template: repeat(4, 1fr) / 1fr;
    
}


button {
    color: white;
    background-color: #304D30;
    border-style: none;
    border-radius: 30px;
}

.cards {
    background-color: whitesmoke;
    border-left-style: solid;
    border-left-color: #304D30;
    border-radius: 10px;
    border-width: 0px 0px 0px 10px;
    height: 280px;

    /* Items: */
    display: grid;
    grid-template-rows: 7fr 3fr;
}


.cards:hover {
    background-color: #EEF0E5;
    cursor: pointer;
}

 .card-text {
    display: grid;
    grid-template-rows: 1fr 3fr;
    padding: 10px 12px 0 10px;
    row-gap: 3px;
 }

 .card-text > strong:first-child {
    align-self: end;
 }


.cards-container {
    display: grid;
    grid-template-rows: 1fr 20fr;
    row-gap: 10px;
    padding-top: 20px;
}

.cards-container-heading {
    align-self: end;
    font-size: 1.2rem;
}

.cards-container > div {
    padding-left: 20px;
}

.cards-grid {
    display: grid;
    column-gap: 30px;
    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
}

.dash-logo {
    margin-top: 20px;

}


.dash-logo > span {
    column-gap: 5px;
    display: grid;
    grid-template-columns: 1fr 4fr;
}

.dash-logo > span >  h1 {
    align-self: center;
    color: white;
    display: inline-block;
    font-size: 1.5rem;
}


.grid {
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: 1fr 4fr;
    height: 100%;
    width: 100%;
}


h2 {
    color: white;
    display: inline-block;
    font-size: 1rem;
}

h4 {
    font-weight: normal;
}

.header {
    grid-column: 2 / 3;
    grid-row: 1 / 2;
}


.header > div {
    padding-left: 60px;
    padding-right: 90px;
}


hr {
    margin-bottom: 10px;
    margin-top: 10px;
}


input {
    background-color: #EEF0E5;
    border-style: none;
    border-radius: 20px;
    height: 50%;
    width: 75%;
}

.left-side {
    display: grid;
    grid-template-columns: 1fr 20fr;
    height: 100%;
    place-items: center;
}

.left-side > svg,
.left-side > input {
    justify-self: start;
}

.main-content {
    background-color: #c4cac4;
    column-gap: 20px;
    grid-column: 2 / 3;
    grid-row: 2 / 3;

    /* Items: */
    display: grid;
    grid-template-columns: 3fr 1fr;
}

.main-navigation {
    display: grid;
    grid-template: repeat(6, 1fr) / 1fr;
    margin-top: 55px;
    margin-bottom: 55px;
    row-gap: 10px;
    width: 100%;
}

.right-side {
    align-items: center;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: start;
    height: 100%;
}

.right-side > svg:first-child {
    justify-self: end;
}

.right-side > svg:nth-child(2) {
    justify-self: center;
}

.row1 {
    display: grid;
    grid-template-columns: 3fr 1fr;
    height: 40%;
    width: 100%;
}

.row2 {
    display: grid;
    grid-template-columns: 3fr 1fr;
    margin-top: 10px;
    width: 100%;
}

.row2-left {
    display: grid;
    grid-template-columns: 1fr 10fr;
    
}

.row2-left > div:nth-child(1) {
    display: grid;

}

.row2-left > div:nth-child(2) {
    display: grid;
}


.row2-left > div > h1 {
    font-size: 1.4rem;
}

.row2-right {
    align-self: center;
    display: grid;
    gap: 20px;
    grid-template-columns: repeat(3, 1fr);
    height: 50%;
}

.sidebar {
    background-color: #304D30;
    grid-column: 1 / span 1;
    grid-row: 1 / -1;
    padding-left: 15px;

}

.side-container {
    display: grid;
    grid-template-rows: repeat(2, 1fr);
}

.side-container-top {
    margin-top: 30px;
}

#trending-heading {
    font-size: 1.2rem;
    margin-top: 20px;
    margin-bottom: 10px;
}

.trending-topic {
    align-items: center;
    column-gap: 15px;
    display: grid;
    grid-template-columns: 1fr 4fr;
    
}


.trending-topic:hover {
    background-color: #EEF0E5;
    cursor: pointer;
}

